styles.css
:root{
    --colorprimary: #FFFFFF;
    --colorsecondary: #A7BEE7;
    --coloraccent: #2E3134;
    --primaryff: "Abyssinica SIL";
    --secondaryff: "Baloo Paaji 2";
    --textff: "Inter";
    --h1: bold 96px var(--secondaryff);
    --h2: 32px var(--primaryff);
}

html{
    scroll-snap-type: y mandatory;
}

body{
    background-color: var(--coloraccent);
}

.section{
    scroll-snap-align: start;
}

/* Navigation Bar Styles */
.navbar{
    position: fixed;
    top: 0;
    width: 100%;
    height: 120px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--coloraccent);
    font: var(--h2);
}

.navbar ul{
    list-style-type: none;
    margin: 0;
    padding: 0;
}
 
.navbar ul li{
    display: inline;
    margin: 0 50px;
    border-bottom: 1px solid var(--colorsecondary);
}

.navbar ul li a, .navbar ul li a:visited, .navbar ul li a:hover, .navbar ul li a:focus{
    color: var(--colorprimary);
    text-decoration: none;
}

/* Homepage Styles */

.home{
    margin-top: 120px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;

    /* Animation */
    animation: fadeInAnimation ease 3s;    
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
}
@keyframes fadeInAnimation {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}
.home h1{
    font:var(--h1);
    font-weight: 700;
    color: var(--colorsecondary);
    letter-spacing: 40px;
}

